[package]
name = "socketioxide-emitter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Broadcast events across a Socketioxide cluster from any Rust process"
authors = ["Théodore Prévot <"]
repository = "https://github.com/Totodore/socketioxide-emitter"
homepage = "https://github.com/Totodore/socketioxide-emitter"
keywords = ["socketioxide", "redis", "emitter"]
readme = "README.md"
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::websocket",
]
license = "MIT"


[dependencies]
rmp-serde = "1"
serde = "1"
socketioxide-core = "0.16"

socketioxide-parser-common = { version = "0.16", optional = true }
socketioxide-parser-msgpack = { version = "0.16", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.28", features = ["aio", "tokio-comp", "streams"] }
fred = { version = "10", features = ["subscriber-client", "i-pubsub"] }
socketioxide = { version = "0.16", features = ["__test_harness", "tracing"] }
socketioxide-redis = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["common-parser"]
msgpack-parser = ["dep:socketioxide-parser-msgpack"]
common-parser = ["dep:socketioxide-parser-common"]

[[example]]
name = "redis"
path = "examples/redis.rs"
required-features = ["common-parser"]

[[example]]
name = "redis_msgpack"
path = "examples/redis_msgpack.rs"
required-features = ["msgpack-parser"]

[[example]]
name = "fred"
path = "examples/fred.rs"
required-features = ["common-parser"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
